@@ -11,6 +11,8 @@
 
 * Enforced desktop font update on the desktop resize with GTK+ 3.0.
 
+* Fixed items layout order to never be tried before desktop is realized.
+
 
 Changes on 1.2.3 since 1.2.2:
 
